add correct contact information

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
             <div class="footer-contact">
                 <h3 class="footer-title">Contact</h3>
-                <p class="footer-contact-info">Email Address:  <span>info@ramanillusions.com</span></p>
+                <p class="footer-contact-info">Email Address:  <span>ramanbookings@gmail.com</span></p>
                 <p class="footer-contact-info">Phone Number: <span>+905 - 962 - 1515</span></p>
             </div>
         </div>
